--- a/inputArray.html
+++ b/inputArray.html
@@ -3,12 +3,13 @@
 	<head>
 		<title>Input to An Array</title>
 		<script src="arraydisp.js"></script>
+		<link rel="stylesheet" href="custom.css"></link>
 	</head>
 	<body>
 		<label id="lblinput">Type a word, sentence or phrase: </label>
 		<input type="text" id="txtinput"></input>
 		<button id="btnSubmit">Submit</button>
-		<button id="btnDisplay">Display</button><br>
+		<button id="btnDisplay">Display</button><br><br>
 		<ul id="lbldispresult"></ul>
 	</body>
 </html>
